<resources>
    <string name="app_name" translatable="false">IGFlexin</string>

    <string name="facebook_app_id" translatable="false">686772235042657</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb686772235042657</string>

    <string name="welcome_to_igflexin">Welcome to IGFlexin</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="welcome_to">Welcome to</string>
    <string name="increase_your_ig_follower_count">Increase your IG follower count!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="how_it_works_see_for_yourself">How it works? See for yourself!</string>
    <string name="by_creating_an_account_i_accept_igflexin_s_terms_of_service">By creating an account, I accept IGFlexin\'s\nTerms of Service.</string>
    <string name="error_check_your_connection">Error, check your connection!</string>
    <string name="error_occurred">An error occurred!</string>
    <string name="account_not_found">User with this email does not exist!</string>
    <string name="account_disabled">Account with this email is disabled!</string>
    <string name="account_already_exists">Account with this email already exists, sign in!</string>
    <string name="account_exists_with_different_auth_method">This email is associated with another auth method!</string>
    <string name="account_auth_credential_link_to_another_account">This credential is linked to another account!</string>
    <string name="invalid_password">Invalid email and password combination!</string>
    <string name="weak_password">Your password is too weak!</string>
    <string name="dashboard">Dashboard</string>
    <string name="accounts">Accounts</string>
    <string name="subscription">Subscription</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="back">Back</string>
    <string name="how_igflexin_works">How IGFlexin works?</string>
    <string name="ready_to_go">Ready to go!</string>
    <string name="how_it_works_explanation">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et leo nec erat interdum ultrices. Sed urna metus, imperdiet vel sapien vestibulum, iaculis maximus est. Morbi bibendum aliquam ante vel blandit. Nulla blandit viverra lectus. Phasellus scelerisque elit sed diam rhoncus, sed vestibulum libero consequat. Pellentesque magna massa, convallis et nulla non, pellentesque finibus lorem. Mauris leo neque, pharetra et nibh eget, egestas tincidunt sem. Nullam dignissim quis sapien a rhoncus. Mauris pellentesque quis urna vel ultrices. Etiam in leo pulvinar, aliquam justo id, hendrerit nunc. Vivamus sit amet luctus quam, nec lobortis diam. Donec aliquam convallis est id aliquam. Suspendisse vitae volutpat lacus, sit amet aliquam urna. Nullam convallis faucibus turpis quis interdum.

Integer vel lorem placerat, ultricies erat sed, sagittis lectus. Aenean venenatis odio magna, ut elementum quam sodales at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus pretium lacus nibh, quis egestas nunc iaculis dictum. Vivamus suscipit diam at metus interdum, eu malesuada mi iaculis. Duis vestibulum magna auctor libero bibendum, ut placerat odio sagittis. Pellentesque vehicula lacinia justo, et bibendum enim porta quis. Etiam semper mattis augue eget scelerisque. Ut quis tristique dolor, vitae luctus quam.

Vestibulum at sapien in ante ultricies blandit non viverra odio. In eget magna felis. Donec felis turpis, lobortis quis mauris eget, tincidunt eleifend sem. Phasellus volutpat lacus in leo elementum varius. Duis pulvinar tellus non dapibus accumsan. Sed pulvinar, urna sed sagittis sollicitudin, elit dui faucibus mi, ut rhoncus justo felis a dui. Sed quis metus vel velit egestas imperdiet. Nam at blandit elit. Praesent placerat nulla eu libero aliquam sodales. Aenean enim metus, pharetra quis aliquet quis, feugiat aliquet neque. Praesent sit amet purus volutpat, tristique orci quis, facilisis est. Nullam accumsan convallis nisi, ac euismod dolor facilisis ut. Maecenas sed dui eleifend, vehicula lectus et, rutrum risus. Duis interdum suscipit dignissim. Suspendisse ut pulvinar nisl.

Integer congue sagittis lectus, et dapibus nisi faucibus vitae. Ut at sapien vehicula, tristique dolor a, faucibus turpis. Proin ex tortor, vulputate aliquet sodales ullamcorper, cursus vitae augue. Integer pellentesque ipsum non metus bibendum condimentum. In libero est, blandit in vulputate nec, vehicula a purus. Suspendisse mollis elementum felis at gravida. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras imperdiet faucibus lobortis. Pellentesque in diam sit amet ipsum viverra lacinia vitae finibus ante. Ut quis mauris cursus, luctus est posuere, auctor sem. In arcu justo, vehicula at nisi aliquam, mattis ultrices elit. Aliquam at est vitae purus tristique faucibus. Nulla facilisi. Praesent et aliquet enim. Etiam varius velit lectus, et molestie eros vehicula eu.

Vivamus sit amet ullamcorper neque, eu volutpat arcu. Nulla neque eros, sagittis in interdum sodales, facilisis et diam. Quisque fringilla orci sapien, et vulputate magna fermentum et. Sed sem est, feugiat ac eros quis, ultrices accumsan massa. Vivamus malesuada gravida ante sed ullamcorper. Duis eget ipsum at quam mattis porttitor. Donec iaculis odio non augue tincidunt, vel fermentum justo congue. Mauris ac urna quis purus finibus tristique. Curabitur eget accumsan tortor. Praesent imperdiet sollicitudin risus non tristique. Vivamus egestas elit elementum velit mollis, in lacinia erat ultrices.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="name_or_email">Name or email</string>
    <string name="error_name">Name must be at least 3 characters long!</string>
    <string name="error_email">Wrong email format!</string>
    <string name="error_password">Password must have at least 8 characters, 1 capital letter and 1 number!</string>
    <string name="error_password_again">Passwords are not same!</string>
    <string name="error_field_required">This field is required</string>
    <string name="verification_link_has_been_sent_to_your_email_activate_your_account_and_go_back_to_the_app_to_sign_in">Verification link has been sent to your email. Activate your account and go back to the app to sign in!</string>
    <string name="email_verification">Email verification</string>
    <string name="try_again">Retry</string>
    <string name="sending_verification_email_failed">Sending verification email failed!</string>
    <string name="add_an_ig_account">Add an IG account</string>
    <string name="choose_your_subscription_period">Choose your subscription period</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly_best_variant">Quarterly - BEST VARIANT</string>
    <string name="starting_at">Starting at</string>
    <string name="per_week">per week</string>
    <string name="per_month">per month</string>
    <string name="per_quarter_of_a_year">per quarter of a year</string>
    <string name="select">Select</string>
    <string name="fifty_percent_off_on_first_payment">50% off on first payment</string>
    <string name="first_seven_days_for_free">First 7 days for free (cancel anytime)</string>
    <string name="quarterly">QUARTERLY</string>
    <string name="choose_your_bundle">Choose your bundle</string>
    <string name="choose_your_weekly_bundle">Choose your\nWEEKLY bundle</string>
    <string name="choose_your_monthly_bundle">Choose your\nMONTHLY bundle</string>
    <string name="choose_your_quarterly_bundle">Choose your\nQUARTERLY bundle</string>
    <string name="basic">BASIC</string>
    <string name="standard">STANDARD</string>
    <string name="business">BUSINESS</string>
    <string name="business_pro">BUSINESS PRO</string>
    <string name="limited_to_one_ig_acc">Limited to 1 Instagram account.</string>
    <string name="up_to_three_ig_accs">Up to 3 Instagram accounts.</string>
    <string name="up_to_six_ig_accs">Up to 6 Instagram accounts.</string>
    <string name="unlimited_num_of_ig_accs">Unlimited number of Instagram accounts.</string>
    <string name="error">Error</string>
    <string name="retry">RETRY</string>
    <string name="ok">OK</string>
</resources>
