<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@id/dashboardFragment"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/dashboard" />
        <item
            android:id="@id/instagramAccountManagementFragment"
            android:icon="@drawable/ic_supervisor_account_white_24dp"
            android:title="@string/accounts" />
        <item
            android:id="@id/subscriptionManagementFragment"
            android:icon="@drawable/ic_attach_money_white_24dp"
            android:title="@string/subscription" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/signOutMenuItem"
            android:icon="@drawable/ic_exit_to_app_white_24dp"
            android:title="@string/sign_out" />
    </group>
</menu>